tests/ui/union/projection-as-union-type.stderr
error[E0740]: unions cannot contain fields that may need dropping
  --> $DIR/projection-as-union-type.rs:16:5
   |
LL |     a:  <Foo as Identity>::Identity,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: a type is guaranteed not to need dropping when it implements `Copy`, or when it is the special `ManuallyDrop<_>` type
help: when the type does not implement `Copy`, wrap it inside a `ManuallyDrop<_>` and ensure it is manually dropped
   |
LL |     a:  std::mem::ManuallyDrop<<Foo as Identity>::Identity>,
   |         +++++++++++++++++++++++                           +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0740`.
